--- a/observe/index.html
+++ b/observe/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Observe Mode — ReserveGrid OS</title>
-  <meta name="description" content="Read-only template verification dashboard. Live verdicts, policy state, and rejection reason analytics for ReserveGrid OS.">
+  <meta name="description" content="Live gateway monitoring dashboard. Share events, verdict analytics, reason code breakdown, and policy state for your SV2 deployment.">
   <meta name="theme-color" content="#0a1628">
 
-  <link rel="canonical" href="https://veldra.org/observe/">
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/brand/favicon-16.png">
@@ -841,7 +840,7 @@
           <a href="/about/">About</a>
         </div>
         <div class="nav-actions">
-          <a href="/observe/" class="btn btn-primary btn-sm" aria-current="page">Observe</a>
+          <a href="/observe/" class="btn btn-primary btn-sm">Observe</a>
         </div>
         <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12h18M3 6h18M3 18h18"/></svg>
@@ -859,11 +858,11 @@
           <span class="section-eyebrow" style="margin-bottom:0;">Observe Mode</span>
         </div>
         <h1 class="hero-title" style="font-size:clamp(28px,4vw,48px);color:var(--ink);">
-          Template verification <span class="accent">dashboard</span>
+          Gateway monitoring <span class="accent">dashboard</span>
         </h1>
         <p class="hero-sub" style="color:var(--ink-muted);max-width:560px;margin:12px 0 0;">
-          Read-only view of live verdicts, rejection analytics, and policy state.
-          No code access. No mutation. Pure observability.
+          Live share events, gateway metrics, reason code analytics, and policy state.
+          Real-time insights into your SV2 deployment performance and health.
         </p>
       </div>
     </div>
@@ -1329,7 +1328,7 @@
           <h4>Product</h4>
           <div class="footer-links">
             <a href="/product/">ReserveGrid OS</a>
-            <a href="/product/#demo">Demo</a>
+            <a href="/observe/">Observe Mode</a>
           </div>
         </div>
         <div>
