Veldra Webpage Redesign in Accomodation with V1.0.0 pre-release update part 2

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>About — Veldra</title>
   <meta name="description" content="Veldra builds SV2 mining gateway infrastructure. Production Rust. Deterministic verification. Structured observability.">
-  <meta name="theme-color" content="#0a1628">
+  <meta name="theme-color" content="#080e1a">
 
   <link rel="canonical" href="https://veldra.org/about/">
   <link rel="icon" href="/favicon.ico">
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=7">
-  <script src="/assets/script.js?v=7" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=8">
+  <script src="/assets/script.js?v=8" defer></script>
 </head>
 <body>
 
