--- a/observe/index.html
+++ b/observe/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Observe Mode — ReserveGrid OS</title>
   <meta name="description" content="Live gateway monitoring dashboard. Share events, verdict analytics, reason code breakdown, and policy state for your SV2 deployment.">
-  <meta name="theme-color" content="#0a1628">
+  <meta name="theme-color" content="#080e1a">
 
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
@@ -19,8 +19,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=7">
-  <script src="/assets/script.js?v=7" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=8">
+  <script src="/assets/script.js?v=8" defer></script>
 
   <style>
     /* ── Observe-specific styles ────────────────── */
