--- a/product/index.html
+++ b/product/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>ReserveGrid OS — SV2 Mining Gateway</title>
   <meta name="description" content="Miner-facing Stratum V2 gateway with Noise NX, template verification, prevhash fail-closed switching, and two-event share lifecycle. 34 reason codes, 51 config keys, 3 deployment modes.">
-  <meta name="theme-color" content="#0a1628">
+  <meta name="theme-color" content="#080e1a">
 
   <link rel="canonical" href="https://veldra.org/product/">
   <link rel="icon" href="/favicon.ico">
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=7">
-  <script src="/assets/script.js?v=7" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=8">
+  <script src="/assets/script.js?v=8" defer></script>
 </head>
 <body>
 
@@ -427,7 +427,7 @@ max_workers_per_channel = 1000           # Limit concurrent workers per channel<
   <!-- ── CTA ─────────────────────────────────── -->
   <section class="section">
     <div class="container">
-      <div class="card card-dark fade-up" style="padding:48px;text-align:center;">
+      <div class="card card-glow fade-up" style="padding:48px;text-align:center;">
         <div class="section-eyebrow" style="color:rgba(255,255,255,.4);">Get started</div>
         <h2 style="color:#fff;margin:12px 0 8px;font-size:28px;">Ready to deploy SV2 with confidence?</h2>
         <p style="color:rgba(255,255,255,.55);max-width:540px;margin:0 auto 24px;">
@@ -435,7 +435,7 @@ max_workers_per_channel = 1000           # Limit concurrent workers per channel<
         </p>
         <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap;">
           <a href="/docs/" class="btn btn-primary">Read the docs</a>
-          <a href="/observe/" class="btn" style="border-color:rgba(255,255,255,.15);color:rgba(255,255,255,.8);background:rgba(255,255,255,.06);">Try observe mode</a>
+          <a href="/observe/" class="btn btn-outline">Try observe mode</a>
         </div>
       </div>
     </div>
