--- a/privacy/index.html
+++ b/privacy/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Privacy Policy — Veldra</title>
   <meta name="description" content="Veldra privacy policy: what data we collect, how we use it, and your rights.">
-  <meta name="theme-color" content="#0a1628">
+  <meta name="theme-color" content="#080e1a">
 
   <link rel="canonical" href="https://veldra.org/privacy/">
   <link rel="icon" href="/favicon.ico">
@@ -19,8 +19,8 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=7">
-  <script src="/assets/script.js?v=7" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=8">
+  <script src="/assets/script.js?v=8" defer></script>
 </head>
 <body>
 
