Veldra Webpage Redesign in Accomodation with V1.0.0 pre-release update part 3

--- a/about/index.html
+++ b/about/index.html
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=8">
-  <script src="/assets/script.js?v=8" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=10">
+  <script src="/assets/script.js?v=10" defer></script>
 </head>
 <body>
 
@@ -94,13 +94,11 @@
       <div class="section-header">
         <div class="section-eyebrow">Featured product</div>
         <h2>ReserveGrid OS</h2>
-        <p>
-          SV2 miner-facing gateway. Noise NX transport. Template verification against operator policy.
-          Prevhash fail-closed switching. Two-event share lifecycle. 34 GatewayReason codes. 51 TOML config keys.
-        </p>
+        <p>SV2 miner-facing gateway with template verification, fail-closed prevhash switching, and a two-event share lifecycle.</p>
       </div>
-      <div class="fade-up" style="text-align:center;margin-top:32px;">
-        <a href="/product/" class="btn btn-primary">Explore ReserveGrid OS</a>
+      <div class="fade-up cta-actions">
+        <a href="/product/" class="btn btn-glow">Explore the product</a>
+        <a href="/docs/" class="btn btn-outline">Read the docs</a>
       </div>
     </div>
   </section>
@@ -176,7 +174,7 @@
         <div class="section-eyebrow">Contact</div>
         <h2>Get in touch</h2>
       </div>
-      <div class="fade-up" style="text-align:center;margin-top:32px;">
+      <div class="fade-up mt-8" style="text-align:center;">
         <div class="code-panel" data-lang="text">
           <button class="copy-btn">Copy</button>
 <pre>jarrondeng@veldra.org</pre>
@@ -190,7 +188,7 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-brand">
-          <img src="/assets/brand/veldra-logo.png" alt="Veldra" style="height:28px;filter:brightness(0) invert(1);opacity:.7;">
+          <img src="/assets/brand/veldra-logo.png" alt="Veldra">
           <p>SV2 mining gateway infrastructure for production pool operators.</p>
         </div>
         <div>
