--- a/terms/index.html
+++ b/terms/index.html
@@ -19,8 +19,8 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=8">
-  <script src="/assets/script.js?v=8" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=10">
+  <script src="/assets/script.js?v=10" defer></script>
 </head>
 <body>
 
@@ -130,7 +130,7 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-brand">
-          <img src="/assets/brand/veldra-logo.png" alt="Veldra" style="height:28px;filter:brightness(0) invert(1);opacity:.7;">
+          <img src="/assets/brand/veldra-logo.png" alt="Veldra">
           <p>Infrastructure for Bitcoin mining pool operators.</p>
         </div>
         <div>
