--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=8">
-  <script src="/assets/script.js?v=8" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=10">
+  <script src="/assets/script.js?v=10" defer></script>
 </head>
 <body>
 
@@ -138,16 +138,16 @@
         <svg viewBox="0 0 960 200" width="960" height="200" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="glow-line-grad" x1="0" y1="0" x2="1" y2="0">
-              <stop offset="0%" stop-color="#3da5ff"/>
-              <stop offset="50%" stop-color="#22d3ee"/>
-              <stop offset="100%" stop-color="#4ade80"/>
+              <stop offset="0%" stop-color="#b07828"/>
+              <stop offset="50%" stop-color="#d4943c"/>
+              <stop offset="100%" stop-color="#e8b060"/>
             </linearGradient>
             <filter id="node-glow">
               <feGaussianBlur stdDeviation="4" result="blur"/>
               <feMerge><feMergeNode in="blur"/><feMergeNode in="SourceGraphic"/></feMerge>
             </filter>
             <marker id="arrow" markerWidth="8" markerHeight="6" refX="7" refY="3" orient="auto">
-              <path d="M0,0 L8,3 L0,6" fill="#3da5ff"/>
+              <path d="M0,0 L8,3 L0,6" fill="#d4943c"/>
             </marker>
           </defs>
 
@@ -160,9 +160,9 @@
           <line x1="415" y1="90" x2="505" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
 
           <!-- Protocol labels on lines -->
-          <text x="200" y="78" fill="#3da5ff" font-size="10" text-anchor="middle" opacity=".7">Noise NX</text>
-          <text x="460" y="78" fill="#22d3ee" font-size="10" text-anchor="middle" opacity=".7">TCP/NDJSON</text>
-          <text x="740" y="78" fill="#4ade80" font-size="10" text-anchor="middle" opacity=".7">RPC</text>
+          <text x="200" y="78" fill="#d4943c" font-size="10" text-anchor="middle" opacity=".7">Noise NX</text>
+          <text x="460" y="78" fill="#e8b060" font-size="10" text-anchor="middle" opacity=".7">TCP/NDJSON</text>
+          <text x="740" y="78" fill="#8899ad" font-size="10" text-anchor="middle" opacity=".7">RPC</text>
 
           <!-- Node: Miner -->
           <rect x="30" y="55" width="125" height="70" rx="12" fill="#0f172a" stroke="rgba(226,232,240,0.12)" stroke-width="1"/>
@@ -170,15 +170,15 @@
           <text x="92" y="105" fill="rgba(226,232,240,0.4)" font-size="10" text-anchor="middle">SV2 client</text>
 
           <!-- Node: Gateway (highlighted) -->
-          <rect x="245" y="50" width="170" height="80" rx="12" fill="rgba(0,128,229,0.08)" stroke="#0080e5" stroke-width="1.5" filter="url(#node-glow)"/>
+          <rect x="245" y="50" width="170" height="80" rx="12" fill="rgba(212,148,60,0.06)" stroke="#d4943c" stroke-width="1.5" filter="url(#node-glow)"/>
           <rect x="245" y="50" width="170" height="3" rx="1" fill="url(#glow-line-grad)"/>
-          <text x="330" y="82" fill="#3da5ff" font-size="14" font-weight="700" text-anchor="middle">sv2-gateway</text>
+          <text x="330" y="82" fill="#e8b060" font-size="14" font-weight="700" text-anchor="middle">sv2-gateway</text>
           <text x="330" y="102" fill="rgba(226,232,240,0.5)" font-size="10" text-anchor="middle">ReserveGrid OS</text>
 
           <!-- Gateway → Verifier (below) -->
-          <line x1="330" y1="130" x2="330" y2="165" stroke="#22d3ee" stroke-width="1.5" stroke-dasharray="4 3" opacity=".5"/>
-          <rect x="270" y="165" width="120" height="30" rx="6" fill="#0f172a" stroke="rgba(226,232,240,0.08)" stroke-width="1"/>
-          <text x="330" y="185" fill="#22d3ee" font-size="11" font-weight="500" text-anchor="middle">pool-verifier</text>
+          <line x1="330" y1="130" x2="330" y2="165" stroke="#8899ad" stroke-width="1.5" stroke-dasharray="4 3" opacity=".5"/>
+          <rect x="270" y="165" width="120" height="30" rx="6" fill="#0f1520" stroke="rgba(226,232,240,0.08)" stroke-width="1"/>
+          <text x="330" y="185" fill="#8899ad" font-size="11" font-weight="500" text-anchor="middle">pool-verifier</text>
 
           <!-- Node: template-manager -->
           <rect x="505" y="55" width="190" height="70" rx="12" fill="#0f172a" stroke="rgba(226,232,240,0.12)" stroke-width="1"/>
@@ -202,135 +202,28 @@
     </div>
   </section>
 
-  <!-- ── Deployment modes ────────────────────── -->
+  <!-- ── Core capabilities (hooks into product page) ── -->
   <section class="section section-alt">
     <div class="container">
       <div class="section-header">
-        <div class="section-eyebrow">Deployment</div>
-        <h2>Three modes, one binary</h2>
-        <p>Start with shadow mode to observe without risk. Graduate to inline when ready.</p>
+        <div class="section-eyebrow">Capabilities</div>
+        <h2>What the gateway handles</h2>
       </div>
       <div class="grid-3 fade-up">
-        <div class="mode-card mode-shadow">
-          <h3>shadow</h3>
-          <p>Audit only. The gateway does not listen for miners. Templates are verified internally and results are logged, but nothing is distributed.</p>
-          <dl class="mode-card-detail">
-            <dt>Miners connected</dt>
-            <dd>None</dd>
-            <dt>Verification</dt>
-            <dd>Active (log only)</dd>
-            <dt>Risk</dt>
-            <dd>Zero (no miner impact)</dd>
-          </dl>
+        <div class="card">
+          <h3>Three deployment modes</h3>
+          <p>Shadow audits templates without miners. Observe logs verdicts without gating. Inline enforces policy with fail-closed safety. One binary, one config key.</p>
+          <a href="/product/#modes" class="btn btn-outline btn-sm mt-6">See modes</a>
         </div>
-        <div class="mode-card mode-observe">
-          <h3>observe</h3>
-          <p>Miners connect and receive jobs. All templates pass through regardless of verdict. Rejections are logged but not enforced. Full share lifecycle active.</p>
-          <dl class="mode-card-detail">
-            <dt>Miners connected</dt>
-            <dd>Yes</dd>
-            <dt>Verification</dt>
-            <dd>Active (log, never gate)</dd>
-            <dt>Risk</dt>
-            <dd>Low (unverified templates may reach miners)</dd>
-          </dl>
+        <div class="card">
+          <h3>Two-event share lifecycle</h3>
+          <p>Every share produces <code>share_accepted</code> at ACK time and <code>share_forward_result</code> after upstream POST. Joined by <code>share_id</code> with a 1:1 invariant.</p>
+          <a href="/product/#features" class="btn btn-outline btn-sm mt-6">See pipeline</a>
         </div>
-        <div class="mode-card mode-inline">
-          <h3>inline</h3>
-          <p>Full enforcement. No job derived from an unverified template reaches a miner. Prevhash switches are fail-closed with a 50ms verdict timeout and 5s stale hold.</p>
-          <dl class="mode-card-detail">
-            <dt>Miners connected</dt>
-            <dd>Yes</dd>
-            <dt>Verification</dt>
-            <dd>Active (gating enforced)</dd>
-            <dt>Risk</dt>
-            <dd>Production (fail-closed protects integrity)</dd>
-          </dl>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ── Share lifecycle timeline ─────────────── -->
-  <section class="section">
-    <div class="container">
-      <div class="section-header">
-        <div class="section-eyebrow">Share pipeline</div>
-        <h2>Two-event share lifecycle</h2>
-        <p>Every share produces exactly two events, joined by <code>share_id</code> and <code>event_id</code>.</p>
-      </div>
-      <div class="timeline fade-up">
-        <div class="timeline-step">
-          <div class="timeline-dot">1</div>
-          <div class="timeline-label">Share arrives</div>
-          <div class="timeline-desc">Miner submits SubmitSharesStandard over SV2 binary channel</div>
-        </div>
-        <div class="timeline-step">
-          <div class="timeline-dot">2</div>
-          <div class="timeline-label">Validation</div>
-          <div class="timeline-desc">5 checks: channel, job_id, difficulty, ntime, nonce/version_bits</div>
-        </div>
-        <div class="timeline-step">
-          <div class="timeline-dot dot-green">3</div>
-          <div class="timeline-label">share_accepted</div>
-          <div class="timeline-desc">ACK sent to miner immediately. Event includes PoW identity and reason_code</div>
-        </div>
-        <div class="timeline-step">
-          <div class="timeline-dot dot-navy">4</div>
-          <div class="timeline-label">Upstream POST</div>
-          <div class="timeline-desc">Valid share forwarded to pool backend via HTTP with HMAC-SHA256 signing</div>
-        </div>
-        <div class="timeline-step">
-          <div class="timeline-dot dot-green">5</div>
-          <div class="timeline-label">share_forward_result</div>
-          <div class="timeline-desc">Forward outcome recorded: forwarded, upstream_accepted, upstream_http_status</div>
-        </div>
-      </div>
-      <div class="callout callout-green mt-6 fade-up" style="text-align:center;">
-        <strong>1:1 join invariant:</strong> Every <code>share_accepted</code> with <code>sv2_response = "success"</code>
-        produces exactly one <code>share_forward_result</code>. The adapter blocks on channel capacity rather than dropping results.
-      </div>
-    </div>
-  </section>
-
-  <!-- ── Prevhash switching ──────────────────── -->
-  <section class="section section-alt">
-    <div class="container">
-      <div class="section-header">
-        <div class="section-eyebrow">Prevhash safety</div>
-        <h2>Fail-closed prevhash switching</h2>
-        <p>When a new block arrives, the gateway waits for verification before distributing work.</p>
-      </div>
-      <div class="timeline fade-up">
-        <div class="timeline-step">
-          <div class="timeline-dot">1</div>
-          <div class="timeline-label">New block detected</div>
-          <div class="timeline-desc">Template with new prevhash arrives from upstream</div>
-        </div>
-        <div class="timeline-step">
-          <div class="timeline-dot">2</div>
-          <div class="timeline-label">Verdict requested</div>
-          <div class="timeline-desc">TemplatePropose sent to verifier over TCP</div>
-        </div>
-        <div class="timeline-step active">
-          <div class="timeline-dot dot-warn">3</div>
-          <div class="timeline-label">50ms window</div>
-          <div class="timeline-desc">Gateway waits for verdict. Miners stay on last verified job</div>
-        </div>
-        <div class="timeline-step">
-          <div class="timeline-dot dot-green">4</div>
-          <div class="timeline-label">Verdict accepted</div>
-          <div class="timeline-desc">SetNewPrevHash + new job broadcast to all channels</div>
-        </div>
-      </div>
-      <div class="split mt-6 fade-up">
-        <div class="callout callout-green">
-          <strong>Happy path:</strong> Verdict arrives within 50ms. New prevhash and job distributed immediately.
-          Target: p50 &lt; 50ms, p95 &lt; 150ms, p99 &lt; 300ms.
-        </div>
-        <div class="callout callout-warn">
-          <strong>Timeout path:</strong> No verdict within 50ms. Miners hold on stale job for up to 5s.
-          If no verdict after 5s, deterministic disconnect with <code>prevhash_switch_timeout</code> reason code.
+        <div class="card">
+          <h3>Fail-closed prevhash</h3>
+          <p>When a new block arrives, miners hold on stale work until the verifier responds. 50ms verdict timeout, 5s stale hold, deterministic disconnect on expiry.</p>
+          <a href="/product/#features" class="btn btn-outline btn-sm mt-6">See timing</a>
         </div>
       </div>
     </div>
@@ -402,51 +295,30 @@
     </div>
   </section>
 
-  <!-- ── Sample output side-by-side ──────────── -->
+  <!-- ── Sample verdict output ──────────────── -->
   <section class="section section-alt">
     <div class="container">
       <div class="section-header">
         <div class="section-eyebrow">Output</div>
         <h2>What operators see</h2>
-        <p>Every verdict and share event is structured, machine-readable, and joined by stable identifiers.</p>
+        <p>Every verdict is structured, machine-readable, and carries the policy context that caused it.</p>
       </div>
-      <div class="split fade-up">
-        <div>
-          <h3 style="font-family:var(--mono);font-size:13px;font-weight:600;margin-bottom:12px;color:var(--blue-light);">Template verdict</h3>
-          <div class="code-panel" data-lang="json">
-            <button class="copy-btn">Copy</button>
+      <div class="fade-up" style="max-width:600px;margin:0 auto;">
+        <div class="code-panel" data-lang="json">
+          <button class="copy-btn">Copy</button>
 <pre>{
-  "version": 2,
-  "id": 42,
   "accepted": false,
   "reason_code": "avg_fee_below_minimum",
   "reason_detail": "avg_fee=141 < min_avg_fee_used=200",
   "policy_context": {
     "fee_tier": "mid",
-    "min_avg_fee_used": 200,
-    "reject_coinbase_zero": false
+    "min_avg_fee_used": 200
   }
 }</pre>
-          </div>
         </div>
-        <div>
-          <h3 style="font-family:var(--mono);font-size:13px;font-weight:600;margin-bottom:12px;color:var(--blue-light);">Gateway config (excerpt)</h3>
-          <div class="code-panel" data-lang="toml">
-            <button class="copy-btn">Copy</button>
-<pre>[gateway]
-mode = "inline"
-listen_addr = "0.0.0.0:3333"
-verifier_addr = "127.0.0.1:5001"
-upstream_failure_policy = "fail_closed"
-
-# Prevhash timing
-prevhash_verdict_timeout_ms = 50
-prevhash_stale_hold_ms = 5000
-
-# Share upstream
-share_upstream_url = "http://pool-backend:9090/shares"
-share_upstream_secret = "hmac-secret-here"</pre>
-          </div>
+        <div class="cta-actions mt-6">
+          <a href="/docs/#reason-codes" class="btn btn-outline btn-sm">34 reason codes</a>
+          <a href="/docs/#config" class="btn btn-outline btn-sm">51 config keys</a>
         </div>
       </div>
     </div>
@@ -457,11 +329,11 @@ share_upstream_secret = "hmac-secret-here"</pre>
     <div class="container">
       <div class="card-glow fade-up">
         <div class="section-eyebrow" style="position:relative;z-index:1;">Get started</div>
-        <h2 style="color:var(--ink);margin:12px 0 8px;font-size:32px;font-weight:800;position:relative;z-index:1;">Ready to deploy SV2 with confidence?</h2>
-        <p style="color:var(--ink-muted);max-width:540px;margin:0 auto 28px;position:relative;z-index:1;">
+        <h2 class="cta-title" style="font-size:32px;font-weight:800;">Ready to deploy SV2 with confidence?</h2>
+        <p class="cta-sub">
           Shadow mode costs nothing. Observe mode builds trust. Inline mode protects revenue.
         </p>
-        <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap;position:relative;z-index:1;">
+        <div class="cta-actions">
           <a href="/product/" class="btn btn-glow">Explore ReserveGrid OS</a>
           <a href="/docs/" class="btn btn-outline">Read the docs</a>
         </div>
@@ -474,7 +346,7 @@ share_upstream_secret = "hmac-secret-here"</pre>
     <div class="container">
       <div class="footer-inner">
         <div class="footer-brand">
-          <img src="/assets/brand/veldra-logo.png" alt="Veldra" style="height:28px;filter:brightness(0) invert(1);opacity:.7;">
+          <img src="/assets/brand/veldra-logo.png" alt="Veldra">
           <p>SV2 mining gateway infrastructure for production pool operators.</p>
         </div>
         <div>
