--- a/observe/index.html
+++ b/observe/index.html
@@ -19,8 +19,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=8">
-  <script src="/assets/script.js?v=8" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=10">
+  <script src="/assets/script.js?v=10" defer></script>
 
   <style>
     /* ── Observe-specific styles ────────────────── */
@@ -1321,7 +1321,7 @@
     <div class="container">
       <div class="footer-inner">
         <div class="footer-brand">
-          <img src="/assets/brand/veldra-logo.png" alt="Veldra" style="height:28px;filter:brightness(0) invert(1);opacity:.7;">
+          <img src="/assets/brand/veldra-logo.png" alt="Veldra">
           <p>Infrastructure for Bitcoin mining pool operators.</p>
         </div>
         <div>
